--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,28 @@
 [versions]
-agp = "8.13.0"
+agp = "8.13.2"
 gson = "2.13.2"
-kotlin = "2.2.20"
+kotlin = "2.3.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 kotlinxCoroutinesAndroidVersion = "1.10.2"
 kotlinxCoroutinesCoreVersion = "1.10.2"
-activityCompose = "1.11.0"
-composeBom = "2025.09.01"
+activityCompose = "1.12.3"
+composeBom = "2026.01.01"
 constraintlayout = "2.2.1"
 appcompat = "1.7.1"
-lifecycleRuntimeKtxVersion = "2.9.4"
-loggingInterceptor = "5.1.0"
+lifecycleRuntimeKtxVersion = "2.10.0"
+loggingInterceptor = "5.3.2"
 material = "1.13.0"
-okhttp = "5.1.0"
+okhttp = "5.3.2"
 material3 = "1.4.0"
 viewpager2 = "1.1.0"
 viewpager2Version = "1.1.0"
+camerax = "1.4.0"
+mlkitText = "16.0.1"
+cameraView = "1.5.3"
+cameraLifecycle = "1.5.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +50,13 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 viewpager2 = { group = "(", name = "viewpager2", version.ref = "viewpager2" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "camerax" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "camerax" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "camerax" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "camerax" }
+google-mlkit-text-recognition = { module = "com.google.mlkit:text-recognition", version.ref = "mlkitText" }
+camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
+camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
